# picalc_msbc

./: .gitignore  pyproject.toml
src/picalc_msbc/: __init__.py
