[project]
name = "picalc-msbc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Matt Coleman", email = "msbc@princeton.edu" }]
requires-python = ">=3.13"
dependencies = ["numpy>=2.4.1", "scipy>=1.17"]

[project.scripts]
picalc-msbc = "picalc_msbc:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
